--- a/Index.html
+++ b/Index.html
@@ -33,13 +33,14 @@
         <div class="hero-content flex-col lg:flex-row-reverse">
           <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
             <form class="card-body">
+              <h1 class="text-xl font-bold text-center">Login Please</h1>
               <fieldset class="fieldset">
                 <label class="label">Account No</label>
                 <input
                   value="1234567891234"
                   type="number"
                   id="acc-no"
-                  class="input"
+                  class="input input-warning"
                   placeholder="13 Digit Acc No."
                   required
                 />
@@ -48,14 +49,17 @@
                   value="1234"
                   type="password"
                   id="pin-no"
-                  class="input"
+                  class="input input-warning"
                   placeholder="Password"
                   required
                 />
                 <div>
                   <a class="link link-hover">Forgot PIN?</a>
                 </div>
-                <button id="login-btn" class="btn btn-neutral mt-4">
+                <button
+                  id="login-btn"
+                  class="text-white btn bg-cyan-500 shadow-lg shadow-cyan-500/50 mt-4"
+                >
                   Login
                 </button>
               </fieldset>
